kubernetes/infrastructure/overlays/production/traefik/private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: private-ingress
    namespace: traefik
spec:
    ingressClassName: ENC[AES256_GCM,data:tN3ucS0wTC9u+3zhyAejegU=,iv:k2VTvwdNZGtXtDXWQrwooTsbXRvIvHpOe4KOt4H9q8A=,tag:too0UuPpq6JQi3kXwtIejA==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:A54GflnUuNYU26Wvj/S/20DFxKNajcEUcl6WKw==,iv:xYBv3r/t/NHylbZEIk+A/bkQGpBxZmdOPOIgrUSvkIM=,tag:0EVkxBaj1a6rX0VFmU62Mg==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:VA==,iv:2+T0x0ZgTiBlEP6SEcSirA/abiRD0jt12o4VbeQ40VM=,tag:wvGwlPeZxK2uQSmmB+rAaA==,type:str]
                  pathType: ENC[AES256_GCM,data:sDLO03qy,iv:qxWrVtGbRpmyP7aSyEfpdUF3ybrxWKpDhwX6xH/W+PE=,tag:a+GQtuPlXSuS6ZK/anodEQ==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:6KJp5Y5QOQ==,iv:OnVbRuVFkm5JfdjSk6Qu/jeUbF/HDWJjUw7lEc1CmmM=,tag:0D0RdQdQsx4lw6mG9CwtRg==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:/O4=,iv:Q03hIirboRzz/8FYprstIhxmDm8Kqgr02TO1U/xdc0g=,tag:rXM8e89GPp0pM7eMybEaUQ==,type:int]
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByYm11TkNEUlJiRFZpSjRK
[...]
            9brgoGrZqfz0K7uwIbrXrb2hNRKejwBA0nC46oAO4GZhuQWg2zxnbg==
            -----END AGE ENCRYPTED FILE-----
          recipient: age19azmnl8ee2f4r95jnwvr47uhllf33eq66dfc3vuxezq7k5vwqgfsyrdv8n
    encrypted_regex: ^(data|stringData|spec)$
    lastmodified: "2026-07-19T02:35:03Z"
    mac: ENC[AES256_GCM,data:iK/S73yzCrpszXLlTcvldkPDectYsPlGLBA+PxGsSX3aOpGG5CnNQGQpXdu+pc+b3BxWcO/l3ohc/CpriIqmaPfeyOfdTzA32FOuBBQYlvo9zWUaXBxENjTKIiNd/a53CFPZhAVLQWOMtoZ+TH/DcXhsVV7TE089IjlmBGpTgFM=,iv:4NXJHNtmBqh5JolxT2zyb9kpLfbYPOOqhsuu3PM0o6U=,tag:V0inqY5oYr9tUGvr2G525A==,type:str]
    version: 3.13.2
